--- a/index.html
+++ b/index.html
@@ -425,7 +425,17 @@
 
     <div class="background-container"></div>
 
+
     <div class="search-container">
+        <!-- Ny slider här -->
+        <div class="search-mode-container">
+            <div class="search-mode-label">Sök på ingredienser</div>
+            <label class="switch large">
+                <input type="checkbox" id="searchModeSwitch" onchange="toggleSearchMode()">
+                <span class="slider round large"></span>
+            </label>
+            <div class="search-mode-label">Sök på maträtt</div>
+        </div>
         <!-- Slider-knappar ovanför sökfältet -->
         <div class="slider-button-container">
             <div class="veg-container">
