--- a/index.html
+++ b/index.html
@@ -414,6 +414,25 @@
             text-align: center;
             border-radius: 5px;
         }
+
+        .search-mode-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 0;
+        }
+
+        .switch.large {
+            width: 120px;
+            /* Bredd på den stora slidern */
+        }
+
+        .search-mode-label {
+            flex: 1;
+            text-align: center;
+        }
+
+        /* Anpassa så att texten är jämnt fördelad runt slidern */
     </style>
 </head>
 
@@ -565,6 +584,16 @@
         function toggleLangFilter() {
             let langSwitch = document.getElementById('langSwitch');
             isLangFilterActive = langSwitch.checked;
+        }
+
+        function toggleSearchMode() {
+            const searchModeSwitch = document.getElementById('searchModeSwitch');
+            searchForDishes = searchModeSwitch.checked;
+            if (searchForDishes) {
+                console.log("Sökning på maträtter aktiverad");
+            } else {
+                console.log("Sökning på ingredienser aktiverad");
+            }
         }
 
         document.getElementById('searchInput').addEventListener('keydown', function (event) {
