--- a/index.html
+++ b/index.html
@@ -380,6 +380,44 @@
             border-radius: 50%;
         }
 
+        /* Lägg till de nya stilarna precis här */
+        .search-mode-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 0;
+        }
+
+        .switch.large {
+            width: 120px;
+            /* Bredd på den stora slidern */
+        }
+
+        .search-mode-label {
+            flex: 1;
+            text-align: center;
+        }
+
+        .switch.large .slider {
+            background-color: #c2c2c2;
+            /* Standard bakgrundsfärg för slider */
+        }
+
+        .switch.large .slider:before {
+            width: 58px;
+            /* Gör knappen bredare så den kan nå kanterna */
+        }
+
+        input:checked+.slider.large {
+            background-color: #4caf50;
+            /* Grön färg när slidern är till höger */
+        }
+
+        input:not(:checked)+.slider.large {
+            background-color: #f44336;
+            /* Röd färg när slidern är till vänster */
+        }
+
         .veg-container {
             display: flex;
             flex-direction: column;
@@ -498,6 +536,9 @@
         let isVegFilterActive = false;
         let isLangFilterActive = false;
         let ingredientSynonyms = {};
+        let searchForDishes = false; // eller true, beroende på din standardinställning
+
+
 
         async function loadData() {
             const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
@@ -532,37 +573,27 @@
             searchTerm = Object.keys(ingredientSynonyms).find(key => ingredientSynonyms[key] === searchTerm) || searchTerm;
 
             let filteredData = allData.filter(row => {
-                // Check for a match in the dish name and alternative names
-                const matrattMatch = row[0]?.toLowerCase().includes(searchTerm);
-                const alternativaMatrattNamnMatch = row[2]?.toLowerCase().split(',').includes(searchTerm);
-
-                // Check for a match in the ingredients, considering synonyms
-                const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
-                const ingredienserMatch = ingredients.some(ing => {
-                    return ing === searchTerm || Object.keys(ingredientSynonyms).includes(ing) && ingredientSynonyms[ing] === searchTerm;
-                });
-
-                return matrattMatch || alternativaMatrattNamnMatch || ingredienserMatch;
+                if (searchForDishes) {
+                    // Sök endast på maträttens namn
+                    return row[0]?.toLowerCase().includes(searchTerm);
+                } else {
+                    // Sök på ingredienser
+                    const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
+                    return ingredients.some(ing => ing === searchTerm || (ingredientSynonyms[ing] === searchTerm));
+                }
             });
 
-            // Filtrera baserat på taggar
-            if (selectedTags.length > 0) {
-                filteredData = filteredData.filter(row => selectedTags.every(tag => row[1] && row[1].toLowerCase().includes(tag.toLowerCase())));
-            }
-            // Filtrera baserat på söktermen
-            else if (searchTerm) {
-                filteredData = filteredData.filter(row => (row[0] && row[0].toLowerCase().includes(searchTerm)) || (row[1] && row[1].toLowerCase().includes(searchTerm)));
-            }
-
+            // Filtrera för Veg och Svenska om aktiverat
             if (isVegFilterActive) {
-                filteredData = filteredData.filter(row => row[6] && row[6].toLowerCase() === 'ja');
+                filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
             }
             if (isLangFilterActive) {
-                filteredData = filteredData.filter(row => row[7] && row[7].toLowerCase() === 'ja');
+                filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
             }
 
             displayData(filteredData);
         }
+
 
         function addTagFromButton() {
             const inputField = document.getElementById('searchInput');
