försöker igen att inaktivera lägg till knappen när huvudslidern är till höger

--- a/index.html
+++ b/index.html
@@ -596,14 +596,13 @@
 
 
         function addTagFromButton() {
-            // Kontrollera om sökningen är inställd på maträtter, förhindra att lägga till taggar
-            if (searchForDishes) {
-                console.log("Lägg till knappen är inaktiv när sökning på maträtter är aktiverad");
-                return; // Avslutar funktionen här
-            }
-
             const inputField = document.getElementById('searchInput');
             const input = inputField.value.trim().toLowerCase();
+
+            if (searchForDishes) {
+                console.log("Lägg till knappen är inaktiv när sökning på maträtter är aktiverad");
+                return;
+            }
 
             if (input && !selectedTags.includes(input)) {
                 selectedTags.push(input);
