ändrar färg på huvudslider nu till blå på båda sidor samt tog bort en dublett av serach container

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 
 
         input:checked+.slider.large {
-            background-color: #4caf50;
+            background-color: #0075fe;
             /* Grön färg när slidern är till höger */
         }
 
@@ -500,21 +500,7 @@
             border-radius: 5px;
         }
 
-        .search-mode-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 0;
-        }
 
-    
-
-        .search-mode-label {
-            flex: 1;
-            text-align: center;
-        }
-
-        /* Anpassa så att texten är jämnt fördelad runt slidern */
     </style>
 </head>
 
