har inte lyckats med föregående uppgift, men testar nu att lägga till box-sizing längst upp i css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             font-family: 'Indie Flower', cursive;
         }
 
+        * {
+            box-sizing: border-box;
+        }
+
         .background-container {
             position: fixed;
             top: 0;
