--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
             const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag'; // Använd din faktiska API-nyckel
             const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM'; // Använd ditt faktiska kalkylboks-ID
             const dataRange = 'Blad1!A2:J'; // Ändra så att detta matchar din huvuddata
-            const synonymRange = 'Ingredienser/primär!A2:C'; // Nytt blad och kolumn för synonymer och primära ingredienser
+            const synonymRange = 'Ingredienser!A2:C'; // Nytt blad och kolumn för synonymer och primära ingredienser
             const dataUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${dataRange}?key=${apiKey}`;
             const synonymUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${synonymRange}?key=${apiKey}`;
 
