--- a/index.html
+++ b/index.html
@@ -618,19 +618,25 @@
         function performSearch() {
             let searchTerm = document.getElementById('searchInput').value.toLowerCase().trim();
 
+            // Omvandla söktermen till en primär ingrediens om det är en synonym
+            searchTerm = ingredientSynonyms[searchTerm] || searchTerm;
+
+            // Omvandla valda taggar till deras primära ingredienser
+            selectedTags = selectedTags.map(tag => ingredientSynonyms[tag.toLowerCase()] || tag);
+
             let filteredData = allData.filter(row => {
+                // Sök på maträttens namn om huvudslidern är till höger
                 if (searchForDishes) {
-                    // Sök endast på maträttens namn
                     return row[0]?.toLowerCase().includes(searchTerm);
                 } else {
-                    // Sök på ingredienser
+                    // Sök på ingredienser om huvudslidern är till vänster
                     const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
                     if (selectedTags.length > 0) {
-                        // Kontrollera att alla taggar finns i ingredienslistan
+                        // Kontrollera att alla valda primära ingredienser finns i receptets ingredienslista
                         return selectedTags.every(tag => ingredients.includes(tag.toLowerCase()));
                     } else {
-                        // Om inga taggar är valda, använd söktermen
-                        return ingredients.some(ing => ing === searchTerm || (ingredientSynonyms[ing] === searchTerm));
+                        // Om inga taggar är valda, använd söktermen för att jämföra med ingredienslistan
+                        return ingredients.some(ing => ing === searchTerm);
                     }
                 }
             });
@@ -640,11 +646,13 @@
                 filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
             }
             if (isLangFilterActive) {
-                filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
+                filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'svenska');
             }
 
             displayData(filteredData);
         }
+
+
 
 
 
