--- a/index.html
+++ b/index.html
@@ -576,6 +576,8 @@
         let isLangFilterActive = false;
         let ingredientSynonyms = {};
         let searchForDishes = false; // eller true, beroende på din standardinställning
+        let primaryIngredients = {};
+        let nonPrimarySynonyms = {};
 
 
 
@@ -597,32 +599,55 @@
                 // Ladda synonymdata
                 const synonymResponse = await fetch(synonymUrl);
                 const synonymData = await synonymResponse.json();
-                ingredientSynonyms = {}; // Återställ mappningsobjektet
+                primaryIngredients = {}; // Återställ mappningsobjektet för primära ingredienser
+                nonPrimarySynonyms = {}; // Återställ mappningsobjektet för icke-primära synonymer
                 synonymData.values.forEach(row => {
-                    const ingredient = row[0]?.toLowerCase().trim(); // Primär ingrediens
+                    const ingredient = row[0]?.toLowerCase().trim(); // Ingrediens
                     const synonyms = row[1]?.toLowerCase().split(',').map(s => s.trim()); // Synonymer
                     if (row[2]?.toLowerCase() === 'ja') {
-                        // Endast lägg till om det är en primär ingrediens
-                        synonyms.forEach(synonym => {
-                            ingredientSynonyms[synonym] = ingredient;
-                        });
+                        primaryIngredients[ingredient] = synonyms;
+                    } else {
+                        nonPrimarySynonyms[ingredient] = synonyms;
                     }
                 });
-                console.log('Synonyms loaded:', ingredientSynonyms);
+                console.log('Primary ingredients loaded:', primaryIngredients);
+                console.log('Non-primary synonyms loaded:', nonPrimarySynonyms);
             } catch (error) {
                 console.error('Error fetching data:', error);
             }
         }
 
 
+
         function performSearch() {
             let searchTerm = document.getElementById('searchInput').value.toLowerCase().trim();
 
-            // Omvandla söktermen till en primär ingrediens om det är en synonym
-            searchTerm = ingredientSynonyms[searchTerm] || searchTerm;
+            // Hitta alla matchande primära ingredienser och icke-primära synonymer
+            let searchTerms = [];
+            if (primaryIngredients[searchTerm]) {
+                searchTerms = primaryIngredients[searchTerm];
+            } else {
+                for (let [key, value] of Object.entries(nonPrimarySynonyms)) {
+                    if (value.includes(searchTerm)) {
+                        searchTerms.push(key);
+                        break;
+                    }
+                }
+            }
 
             // Omvandla valda taggar till deras primära ingredienser
-            selectedTags = selectedTags.map(tag => ingredientSynonyms[tag.toLowerCase()] || tag);
+            selectedTags = selectedTags.map(tag => {
+                if (primaryIngredients[tag]) {
+                    return tag;
+                } else {
+                    for (let [key, value] of Object.entries(nonPrimarySynonyms)) {
+                        if (value.includes(tag)) {
+                            return key;
+                        }
+                    }
+                    return tag;
+                }
+            });
 
             let filteredData = allData.filter(row => {
                 // Sök på maträttens namn om huvudslidern är till höger
@@ -632,11 +657,16 @@
                     // Sök på ingredienser om huvudslidern är till vänster
                     const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
                     if (selectedTags.length > 0) {
-                        // Kontrollera att alla valda primära ingredienser finns i receptets ingredienslista
-                        return selectedTags.every(tag => ingredients.includes(tag.toLowerCase()));
+                        // Kontrollera att alla valda primära ingredienser eller synonymer finns i receptets ingredienslista
+                        return selectedTags.every(tag =>
+                            ingredients.includes(tag.toLowerCase()) ||
+                            searchTerms.some(term => ingredients.includes(term.toLowerCase()))
+                        );
                     } else {
                         // Om inga taggar är valda, använd söktermen för att jämföra med ingredienslistan
-                        return ingredients.some(ing => ing === searchTerm);
+                        return ingredients.some(ing =>
+                            ing === searchTerm || searchTerms.includes(ing)
+                        );
                     }
                 }
             });
@@ -651,10 +681,6 @@
 
             displayData(filteredData);
         }
-
-
-
-
 
 
         function addTagFromButton() {
