aktiverar bara recept på svenska-knappen igen

--- a/index.html
+++ b/index.html
@@ -676,8 +676,9 @@
                 filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
             }
             if (isLangFilterActive) {
-                filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'svenska');
+                filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
             }
+
 
             displayData(filteredData);
         }
