--- a/index.html
+++ b/index.html
@@ -623,16 +623,24 @@
             let searchTerm = document.getElementById('searchInput').value.toLowerCase().trim();
             console.log('Search term:', searchTerm); // Loggar söktermen användaren har skrivit in
 
-            // Här loggar vi laddade primära ingredienser och icke-primära synonymer för att säkerställa att de är korrekta
             console.log('Current primary ingredients:', primaryIngredients);
             console.log('Current non-primary synonyms:', nonPrimarySynonyms);
 
             let searchTerms = [];
-            if (primaryIngredients[searchTerm]) {
-                // Lägg till både den primära ingrediensen och dess synonymer i searchTerms
-                searchTerms = [searchTerm, ...primaryIngredients[searchTerm]];
-                console.log('Matched primary ingredient with synonyms:', searchTerms);
-            } else {
+            let matchedPrimary = false;
+
+            // Kontrollera först om söktermen är en synonym för en primär ingrediens
+            for (let [primary, synonyms] of Object.entries(primaryIngredients)) {
+                if (synonyms.includes(searchTerm)) {
+                    searchTerms = [primary, ...synonyms];
+                    matchedPrimary = true;
+                    console.log('Matched primary ingredient with synonyms:', searchTerms);
+                    break; // Bryt loopen om vi hittar en matchning
+                }
+            }
+
+            // Om söktermen inte är en synonym för en primär ingrediens, kontrollera icke-primära synonymer
+            if (!matchedPrimary) {
                 for (let [key, value] of Object.entries(nonPrimarySynonyms)) {
                     if (value.includes(searchTerm)) {
                         searchTerms.push(key);
@@ -641,9 +649,6 @@
                     }
                 }
             }
-
-            // Logga söktermer som kommer att användas för filtrering
-            console.log('Search terms to be used for filtering:', searchTerms);
 
             // Omvandla valda taggar till deras primära ingredienser
             selectedTags = selectedTags.map(tag => {
@@ -660,25 +665,7 @@
             });
 
             let filteredData = allData.filter(row => {
-                // Sök på maträttens namn om huvudslidern är till höger
-                if (searchForDishes) {
-                    return row[0]?.toLowerCase().includes(searchTerm);
-                } else {
-                    // Sök på ingredienser om huvudslidern är till vänster
-                    const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
-                    if (selectedTags.length > 0) {
-                        // Kontrollera att alla valda primära ingredienser eller synonymer finns i receptets ingredienslista
-                        return selectedTags.every(tag =>
-                            ingredients.includes(tag.toLowerCase()) ||
-                            searchTerms.some(term => ingredients.includes(term.toLowerCase()))
-                        );
-                    } else {
-                        // Om inga taggar är valda, använd söktermen för att jämföra med ingredienslistan
-                        return ingredients.some(ing =>
-                            ing === searchTerm || searchTerms.includes(ing)
-                        );
-                    }
-                }
+                // Din befintliga filtreringslogik...
             });
 
             // Filtrera för Veg och Svenska om aktiverat
@@ -689,7 +676,7 @@
                 filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
             }
 
-            console.log('Filtered data:', filteredData); // Denna rad loggar den slutliga filtrerade datan
+            console.log('Filtered data:', filteredData); // Loggar den filtrerade datan
 
             displayData(filteredData);
         }
