--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
                 }
             });
 
+            // Här behåller vi din ursprungliga söklogik och lägger till den nya synonymhanteringen
             let filteredData = allData.filter(row => {
                 // Sök på maträttens namn om huvudslidern är till höger
                 if (searchForDishes) {
@@ -675,7 +676,7 @@
                         // Kontrollera att alla valda primära ingredienser eller synonymer finns i receptets ingredienslista
                         return selectedTags.every(tag =>
                             ingredients.includes(tag.toLowerCase()) ||
-                            searchTerms.some(term => ingredients.includes(term.toLowerCase()))
+                            searchTerms.includes(tag.toLowerCase())
                         );
                     } else {
                         // Om inga taggar är valda, använd söktermen för att jämföra med ingredienslistan
@@ -698,6 +699,7 @@
 
             displayData(filteredData);
         }
+
 
 
 
