--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
 
             // Om söktermen inte är en synonym för en primär ingrediens, kontrollera icke-primära synonymer
             if (!matchedPrimary) {
-                for (let [key, value] of Object.entries(nonPrimarySynonyms)) {
-                    if (value.includes(searchTerm)) {
+                for (let [key, synonyms] of Object.entries(nonPrimarySynonyms)) {
+                    if (synonyms.includes(searchTerm)) {
                         searchTerms.push(key);
                         console.log('Matched non-primary synonym:', key);
                         break;
@@ -655,8 +655,8 @@
                 if (primaryIngredients[tag]) {
                     return tag;
                 } else {
-                    for (let [key, value] of Object.entries(nonPrimarySynonyms)) {
-                        if (value.includes(tag)) {
+                    for (let [key, synonyms] of Object.entries(nonPrimarySynonyms)) {
+                        if (synonyms.includes(tag)) {
                             return key;
                         }
                     }
@@ -664,8 +664,27 @@
                 }
             });
 
+            // Här behåller vi din ursprungliga söklogik och lägger till den nya synonymhanteringen
             let filteredData = allData.filter(row => {
-                // Din befintliga filtreringslogik...
+                // Sök på maträttens namn om huvudslidern är till höger
+                if (searchForDishes) {
+                    return row[0]?.toLowerCase().includes(searchTerm);
+                } else {
+                    // Sök på ingredienser om huvudslidern är till vänster
+                    const ingredients = row[1]?.toLowerCase().split(',').map(ing => ing.trim());
+                    if (selectedTags.length > 0) {
+                        // Kontrollera att alla valda primära ingredienser eller synonymer finns i receptets ingredienslista
+                        return selectedTags.every(tag =>
+                            ingredients.includes(tag.toLowerCase()) ||
+                            searchTerms.includes(tag.toLowerCase())
+                        );
+                    } else {
+                        // Om inga taggar är valda, använd söktermen för att jämföra med ingredienslistan
+                        return ingredients.some(ing =>
+                            ing === searchTerm || searchTerms.includes(ing)
+                        );
+                    }
+                }
             });
 
             // Filtrera för Veg och Svenska om aktiverat
@@ -680,6 +699,8 @@
 
             displayData(filteredData);
         }
+
+
 
 
 
